--- a/css/usluge.css
+++ b/css/usluge.css
@@ -1,21 +1,21 @@
-body{
+body {
   font-family: Arial, Times;
   font-size: 15px;
   line-height: 1.5;
   padding: 0;
-  margin:0;
+  margin: 0;
   background-color: #116466;
 }
 
 /*Globalne*/
 
-.container{
-  margin:auto;
+.container {
+  margin: auto;
   width: 80%;
   overflow: hidden;
 }
 
-ul{
+ul {
   margin: 0;
   padding: 0;
   width: 100;
@@ -23,7 +23,7 @@ ul{
 
 /*Heder*/
 
-header{
+header {
   background-color: #2c3531;
   color: #d1e8e2;
   min-height: 30px;
@@ -31,140 +31,219 @@ header{
   border-bottom: #d1e8e2 3px solid;
 }
 
-
-header h1{
+header h1 {
   font-size: 50px;
   text-align: center;
 }
 
-
-header .jr{
+header .jr {
   color: #116466;
 }
 
-header a{
+header a {
   font-size: 25px;
   text-decoration: none;
   color: #d1e8e2;
 }
 
-
-header li{
+header li {
   float: left;
   padding: 0px 20px 0px 20px;
   display: inline;
-  width:20%;
+  width: 20%;
   text-align: center;
   margin-bottom: 20px;
   border-right: #d1e8e2 3px solid;
 }
 
-header .nas a{
-
-}
-
-header a:hover{
+header a:hover {
   text-shadow: 0px 0px 5px #d1e8e2;
 }
 
 /*zaglavlje*/
 
-#zaglavlje{
+#zaglavlje {
   border-bottom: #d1e8e2 3px solid;
-  background:url('../img/programer.jpg')-200px -300px;
+  background: url("../img/programer.jpg")-200px -300px;
 }
 
-#zaglavlje h1{
+#zaglavlje h1 {
   text-align: right;
   /*padding-left: 300px;*/
   padding-top: 250px;
   color: #116466;
   text-shadow: #000 0px 0px 1px;
-  text
 }
 
 /*paragraf*/
 
-#paragraf{
+#paragraf {
   background-color: #116466;
   padding-top: 35px;
   color: #d1e8e2;
 }
 
-
 /*Slike*/
 
-.kolona{
+.kolona {
   float: left;
   width: 32%;
   padding: 5px;
 }
 
-#slike img{
-  width:360px;
+#slike img {
+  width: 360px;
   height: 200px;
   margin-left: 55px;
+  cursor: pointer;
 }
 
-#tekst p{
+/*klasa koja se ubacuje pomocu js-a na sliku, transformise je da bude 1.2 * veca nego sto je bila*/
+.promenaSlike {
+  transform: scale(1.2);
+}
+
+#tekst p {
   font-size: 20px;
   color: #d1e8e2;
 }
 
-.slova1{
-  float:left;
+.slova1 {
+  float: left;
   margin-left: 200px;
   position: relative;
 }
 
-.slova2{
+.slova2 {
   text-align: center;
-  margin-right:200px;
+  margin-right: 200px;
   position: relative;
 }
 
-.slova3{
-  float:right;
+.slova3 {
+  float: right;
   padding-right: 120px;
-  margin-top:-70px;
+  margin-top: -70px;
   position: relative;
 }
 
+/*Usluge*/
+#odabirUsluga {
+  margin-top: 70px;
+  margin-bottom: 70px;
+  display: flex;
+  justify-content: center;
+}
+
+table,
+th,
+td {
+  border: 1px solid #d1e8e2;
+  border-collapse: collapse;
+  color: #d1e8e2;
+}
+
+td {
+  width: 250px;
+  height: 70px;
+  text-align: center;
+  background-color: #1e6263;
+}
+
+th {
+  height: 50px;
+  background-color: #0f5455;
+}
+
+/*forma*/
+h2 {
+  text-align: center;
+  color: #d1e8e2;
+}
+#forma {
+  display: flex;
+  justify-content: center;
+}
+.odabirCena {
+  padding: 30px 0;
+  background-color: #1e6263;
+  color: #d1e8e2;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+  text-align: center;
+  border: 1px solid #d1e8e2;
+}
+
+.odabirContainer {
+  display: flex;
+  gap: 50px;
+}
+
+#btnF {
+  width: 90px;
+  height: 40px;
+  cursor: pointer;
+  background-color: #d1e8e2;
+  border: none;
+}
+
+.odabirContainer label {
+  width: 150px;
+}
+
+.odabirContainer input {
+  width: 30px;
+}
+
+/*poruka*/
+#poruka {
+  margin: 80px 0;
+  display: flex;
+  justify-content: center;
+  color: #d1e8e2;
+}
+
+#poruka input {
+  margin-left: 5px;
+  margin-right: 30px;
+}
+
+#poruka button {
+  cursor: pointer;
+  background-color: #d1e8e2;
+  border: none;
+}
 
 /*Futer*/
-footer{
+footer {
   border-top: #d1e8e2 3px solid;
   min-height: 50px;
   background-color: #2c3531;
 }
 
-footer p{
+footer p {
   color: #d1e8e2;
   text-align: right;
 }
 
-
 /*responsive*/
 
-@media (max-width: 768px){
-  header li{
+@media (max-width: 768px) {
+  header li {
     float: none;
     text-align: center;
     width: 100%;
   }
 
-  .kolona{
-
+  .kolona {
     display: inline;
   }
 
-
-  img{
+  img {
     float: none;
     width: 100%;
   }
-
-
-
-
 }
